# cmakefmt

./: Cargo.toml
src/: main.rs
