[package]
name = "cmakefmt"
version = "0.1.0"
authors = ["Fabian Beckmann <fb@phaseq.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
pico-args = "0.5.0"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = 'abort'
